--- a/prop-solver/frontend/styles.css
+++ b/prop-solver/frontend/styles.css
@@ -5,7 +5,7 @@
 
 table {
     border-collapse: collapse;
-    width: 85%;
+    width: 70%;
 }
 
 th, td {
@@ -39,7 +39,8 @@ th {
 }
 
 .table-wrapper {
-    padding: 10%; 
+    padding-left: 10%;
+    padding-right: 10%; 
 }
 
 .cnf-step {
